--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -12,10 +12,13 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
     "clsx": "^1.1.1",
+    "final-form": "^4.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.3",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/validator": "^13.1.3"
   }
 }
